# databind

./: .gitignore  .licenserc.json  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  databind.toml
.github/: CODEOWNERS  labeler.yaml  labeler.yml
.github/workflows/: build_and_test.yaml  build_docs.yaml  build_release.yaml  build_test_upload.yaml  pr_labeler.yaml  pr_license_check.yaml  release.yaml  test.yaml
docs/: cli.rst  conf.py  config.rst  examples.rst  folder_structure.rst  getting_started.rst  global_vars.rst  index.rst  macros.rst  requirements.txt  syntax.rst
docs/examples/: index.rst
docs/examples/def_examples/: index.rst  long_execute.rst
docs/examples/function_examples/: calling.rst  index.rst  loop.rst  simple_function.rst
docs/examples/if_examples/: if_alone.rst  if_else.rst  index.rst  nested_if.rst
docs/examples/objective_examples/: create_objective.rst  deletion.rst  index.rst  scoreboard_operation.rst
docs/examples/variable_examples/: create_modify_test.rst  deletion.rst  index.rst  scoreboard_operation.rst
docs/examples/while_examples/: for_loop.rst  index.rst  loop_until_false.rst
src/: cli.rs  create_project.rs  databind.pest  files.rs  lexer.rs  lib.rs  main.rs  settings.rs  token.rs  transpile.rs  types.rs
src/cli/: cli.rs  create_project.rs  main.rs
src/compiler/: compile.rs  macros.rs  mod.rs  preprocess.rs  tokenize.rs
src/lexer/: mod.rs  tokenize.rs  transpile.rs
src/lib/: ast.rs  files.rs  lib.rs  settings.rs  token.rs
src/lib/compiler/: compile.rs  if_statements.rs  if_while.rs  macros.rs  mod.rs  parse.rs  preprocess.rs
src/transpiler/: mod.rs  preprocess.rs  tokenize.rs  transpile.rs  while_convert.rs
tests/: cli_file_contents_tests.rs  cli_file_structure_tests.rs  cli_other_tests.rs  config_tests.rs  create_tests.rs  escape_tests.rs  file_contents_tests.rs  file_structure_tests.rs  func_tests.rs  other_tests.rs  tag_tests.rs  tests.rs  while_tests.rs
tests/resources/test_cli_args/data/test/functions/: tick.databind
tests/resources/test_config/: databind.toml
tests/resources/test_config/data/test/functions/: different_extension.test  file1.databind  file2.databind  main.databind
tests/resources/test_escape/data/test/functions/: main.databind
tests/resources/test_existing_tags/data/test/functions/: main.databind
tests/resources/test_file_structure/data/test/functions/: load.databind  main.databind  tick.databind
tests/resources/test_global_macros/data/test/functions/: !macros.databind  main.databind
tests/resources/test_global_vars/: vars.ini  vars.toml
tests/resources/test_if_creation/data/test/functions/: main.databind
tests/resources/test_no_config_out/: should_not_be_made.toml
tests/resources/test_types_global_vars/: vars.toml
(+16 files in other folders)
