[package]
version = "0.3.0"
name = "databind"
authors = ["Adam Thompson-Sharpe <adamthompsonsharpe@gmail.com>"]
edition = "2018"
description = "Expand the functionality of Minecraft Datapacks."
documentation = "https://databind.readthedocs.io/en/v0.3.0/"
readme = "README.md"
repository = "https://github.com/MysteryBlokHed/databind"
license = "GPL-3.0+"
keywords = ["minecraft", "datapacks", "compilers", "transpilers"]
categories = ["compilers", "command-line-utilities"]
exclude = [
    ".github",
    ".vscode",
    ".gitignore",
    ".licenserc.json",
    "databind.toml",
    "docs",
    "target",
    "testing",
]

[dependencies]
clap = "2.33"
glob = "0.3"
rand = "0.8"
regex = "1.5"
same-file = "1.0"
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
toml = "0.5"
walkdir = "2.3"

[dev-dependencies]
tempdir = "0.3"
