[package]
version = "0.7.1"
name = "databind"
authors = ["Adam Thompson-Sharpe <adamthompsonsharpe@gmail.com>"]
edition = "2018"
description = "Expand the functionality of Minecraft Datapacks."
documentation = "https://databind.rtfd.io/en/v0.7/"
readme = "README.md"
repository = "https://github.com/MysteryBlokHed/databind"
license = "GPL-3.0+"
keywords = ["compilers", "datapacks", "minecraft", "transpilers"]
categories = ["command-line-utilities", "compilers"]
include = ["/src/", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
clap = { version = "2.33", optional = true }
glob = "0.3"
rand = "0.8"
regex = "1.5"
same-file = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
walkdir = "2.3"

[dev-dependencies]
tempdir = "0.3"

[features]
cli = ["clap", "same-file"]

[lib]
name = "databind"
path = "src/lib/lib.rs"

[[bin]]
name = "databind"
path = "src/cli/main.rs"
required-features = ["cli"]
